# dungeon-legends

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cc  main.cpp
config/: config.json
core/: CMakeLists.txt
core/ecs/: CMakeLists.txt
core/ecs/include/ecs/: archetype.h  component-base.h  component-collection.h  entity.h  type-traits.h
core/ecs/source/: component-collection.cc  entity.cc
core/include/ecs/: archetype.h  component-base.h  component-collection.h  tag-component.h  type-traits.h
engine/core/: CMakeLists.txt
engine/core/include/: app.hpp  config.hpp
engine/core/include/core/: app.h  base-state.h  config.h  state-manager.h
engine/core/source/: app.cc  app.cpp  config.cc  config.cpp
resources/: CMakeLists.txt
resources/configs/: configuration.xml
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/include/app/: app.hpp  config.hpp
src/app/source/: app.cpp  config.cpp
tests/: CMakeLists.txt
tests/core-ecs/: CMakeLists.txt  component-collection_test.cc
tests/ecs/: CMakeLists.txt  component-collection_test.cc
